k8s/mybot.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: telegram-bot
spec:
  selector:
    app: telegram-bot
  ports:
    - port: 8083
      targetPort: 8083
  type: LoadBalancer 

---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram-bot
  labels:
    app: telegram-bot
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: telegram-bot
  template:
    metadata:
      labels:
        app: telegram-bot
    spec:
      containers:
        - name: telegram-bot
          image: ${DOCKER_IMAGE_NAME}
          ports:
            - containerPort: 8083
