k8s/service-allInOne.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-service-2in1
spec:
  selector:
    app: html-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
