k8s/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-service-v1
spec:
  selector:
    app: html-service
    version: v1
  ports:
    - port: 80
      targetPort: 5678
