k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: html-ingress
spec:
  rules:
    - http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: html-service-v1
                port:
                  number: 80

          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: html-service-v2
                port:
                  number: 80

          - path: /v3
            pathType: Prefix
            backend:
              service:
                name: html-service-2in1
                port:
                  number: 80
